# stilla

./: .gitignore  BUILD.bazel  Justfile  Makefile  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  main.go  stilla.gh.yaml  stilla.local.yaml
.github/: labeler.yml  pull_request_template.md
.github/codeql/: codeql-config.yml
.github/workflows/: codeql-config.yml  e2e.yml  sast-scan.yml  scorecard.yml
api/: openapi.yaml
api/protobuf/: messages.proto
api/protobuf/messages/: messages.pb.go
lib/db/: db.go  db_test.go
pkg/api/: api_audit.go  api_config.go  api_health.go  api_host.go  dal.go  routers.go  server.go
pkg/api/api/: openapi.yaml
pkg/api/models/: model_audit_log.go  model_audit_log_in.go  model_config_in.go  model_config_response.go  model_config_response_test.go  model_config_store.go  model_config_version.go  model_error.go  model_healthcheck.go  model_host_login_in.go  model_host_register_in.go  model_id_response.go  model_update_config_in.go
pkg/models/: config.go
pkg/utils/: utils.go  utils_test.go
scripts/: seed.sh  settings.yml  test-cleanup.sh  test-setup.sh
sdk/python/: .gitignore  README.md  pyproject.toml  requirements.txt
sdk/python/src/stilla_client/: __init__.py  config.py
sdk/python/src/stilla_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk/python/src/stilla_client_aeekayy/: config.py
sdk/python/tests/: __init__.py  test_config.py
service/: BUILD  BUILD.bazel  main.go  stilla.gh.yaml  stilla.local.yaml
service/api/protobuf/: BUILD  messages.proto
service/api/protobuf/messages/: BUILD.bazel  messages.pb.go
service/cmd/: BUILD.bazel  profiling.go  root.go
service/lib/db/: BUILD  BUILD.bazel  db.go  db_test.go
service/pkg/api/: BUILD  BUILD.bazel  api_audit.go  api_config.go  api_host.go  api_test.go  dal.go  dal_test.go  routers.go  server.go
service/pkg/api/api/: openapi.yaml
service/pkg/api/models/: BUILD.bazel  model_audit_log.go  model_config_response.go  model_config_response_test.go  model_config_store.go  model_config_version.go  model_host_register_in.go
service/pkg/models/: BUILD  BUILD.bazel  config.go  config_test.go
service/pkg/models/tests/: stilla.pass.yaml
service/pkg/service/: BUILD.bazel  service.go
service/pkg/utils/: BUILD  BUILD.bazel  utils.go
service/scripts/: seed.sh
service/tests/: locustfile.py  requirements.txt
sql/: schema.hcl
tests/: locustfile.py  requirements.txt
