load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "service_lib",
    srcs = ["main.go"],
    importpath = "github.com/aeekayy/stilla/service",
    visibility = ["//visibility:private"],
    deps = ["//service/cmd"],
)

go_binary(
    name = "service",
    embed = [":service_lib"],
    visibility = ["//visibility:public"],
)
