load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "profiling.go",
        "root.go",
    ],
    importpath = "github.com/aeekayy/stilla/service/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//service/pkg/service",
        "@com_github_spf13_cobra//:cobra",
    ],
)
