load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api",
    srcs = [
        "api_audit.go",
        "api_config.go",
        "api_health.go",
        "api_host.go",
        "dal.go",
        "routers.go",
        "server.go",
    ],
    importpath = "github.com/aeekayy/stilla/service/pkg/api",
    visibility = ["//visibility:public"],
    deps = [
        "//service/api/protobuf:messages",
        "//service/lib/db",
        "//service/pkg/api/models",
        "//service/pkg/models",
        "//service/pkg/utils",
        "@com_github_confluentinc_confluent_kafka_go//kafka",
        "@com_github_getsentry_sentry_go//gin",
        "@com_github_gin_contrib_cache//persistence",
        "@com_github_gin_contrib_cors//:cors",
        "@com_github_gin_gonic_autotls//:autotls",
        "@com_github_gin_gonic_contrib//sessions",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_go_session_gin_session//:gin-session",
        "@com_github_google_uuid//:uuid",
        "@com_github_newrelic_go_agent_v3//newrelic",
        "@com_github_newrelic_go_agent_v3_integrations_nrgin//:nrgin",
        "@com_github_pkg_errors//:errors",
        "@org_golang_google_protobuf//proto",
        "@org_mongodb_go_mongo_driver//bson",
        "@org_mongodb_go_mongo_driver//bson/primitive",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
        "@org_uber_go_ratelimit//:ratelimit",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "api_test",
    srcs = [
        "api_test.go",
        "dal_test.go",
    ],
    embed = [":api"],
    deps = [
        "//service/pkg/models",
        "@com_github_alicebob_miniredis_v2//:miniredis",
        "@com_github_gin_contrib_cache//persistence",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_stretchr_testify//assert",
        "@org_mongodb_go_mongo_driver//bson",
        "@org_uber_go_zap//zaptest",
    ],
)
