load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "models",
    srcs = ["config.go"],
    importpath = "github.com/aeekayy/stilla/service/pkg/models",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_confluentinc_confluent_kafka_go//kafka",
        "@com_github_spf13_viper//:viper",
    ],
)

go_test(
    name = "models_test",
    srcs = ["config_test.go"],
    embed = [":models"],
    deps = [
        "@com_github_confluentinc_confluent_kafka_go//kafka",
        "@com_github_stretchr_testify//assert",
    ],
)
