load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "utils",
    srcs = ["utils.go"],
    importpath = "github.com/aeekayy/stilla/service/pkg/utils",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_google_protobuf//types/known/structpb"],
)

go_test(
    name = "utils_test",
    srcs = ["utils_test.go"],
    embed = [":utils"],
    deps = ["@com_github_stretchr_testify//assert"],
)
