load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "messages",
    srcs = ["messages.pb.go"],
    importpath = "github.com/aeekayy/stilla/service/api/protobuf/messages",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
